--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
 jobs:
-  test-tags:
+  set-matrix:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -28,10 +28,10 @@ jobs:
           fi
   get:
     runs-on: ubuntu-20.04
-    needs: set
+    needs: set-matrix
     strategy:
       matrix:
-        subdir: ${{ fromJson(needs.test-tags.outputs.matrix) }}
+        subdir: ${{ fromJson(needs.set-matrix.outputs.matrix) }}
     steps:
       - run: echo ${{ matrix.subdir }}
         name: subdir
