--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,6 +21,8 @@ jobs:
     strategy:
       matrix:
         subdir: ${{fromJson(needs.set.outputs.matrix)}}
+    steps:
+      - run: echo ${{ matrix.subdir }}
 
   set-matrix:
     runs-on: ubuntu-latest
