--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,23 +6,23 @@ on:
     branches:
       - main
 jobs:
-  set:
-    runs-on: ubuntu-20.04
-    outputs:
-      matrix: ${{steps.list_dirs.outputs.matrix}}
-    steps:
-      - uses: actions/checkout@v2
-      - id: list_dirs
-        run: echo "::set-output name=matrix::$(ls|jq -cnR '[inputs | select(length>0)]')"
-
-  get-output:
-    runs-on: ubuntu-20.04
-    needs: set
-    strategy:
-      matrix:
-        subdir: ${{fromJson(needs.set.outputs.matrix)}}
-    steps:
-      - run: echo ${{ matrix.subdir }}
+#  set:
+#    runs-on: ubuntu-20.04
+#    outputs:
+#      matrix: ${{steps.list_dirs.outputs.matrix}}
+#    steps:
+#      - uses: actions/checkout@v2
+#      - id: list_dirs
+#        run: echo "::set-output name=matrix::$(ls|jq -cnR '[inputs | select(length>0)]')"
+#
+#  get-output:
+#    runs-on: ubuntu-20.04
+#    needs: set
+#    strategy:
+#      matrix:
+#        subdir: ${{fromJson(needs.set.outputs.matrix)}}
+#    steps:
+#      - run: echo ${{ matrix.subdir }}
 
   set-matrix:
     runs-on: ubuntu-latest
@@ -45,6 +45,11 @@ jobs:
             echo "Tag does not exist"
             echo "::set-output name=matrix::[\"one-test\"]"
           fi
+  test-output:
+    runs-on: ubuntu-20.04
+    needs: set-matrix
+    steps:
+      - run: echo ${{ needs.set-matrix.outputs.matrix }}
   get:
     runs-on: ubuntu-20.04
     needs: set-matrix
@@ -55,4 +60,4 @@ jobs:
       - run: echo ${{ matrix.subdir }}
         name: subdir
         env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
