--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,7 +43,7 @@ jobs:
     needs: get
     strategy:
       matrix:
-        subdir: ${{fromJson(needs.get.outputs.matrix)}}
+        subdir: ${{fromJson(needs.set-matrix.outputs.matrix)}}
     steps:
       - run: echo ${{ matrix.subdir }}
         name: subdir
