--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,10 @@ jobs:
     outputs:
       matrix: ${{steps.set-matrix.outputs.matrix}}
     steps:
+      - name: Dump GitHub context
+        id: github_context_step
+        run: echo '${{ toJSON(github) }}'
+
       - uses: actions/checkout@v2
       - uses: mukunku/tag-exists-action@v1.0.0
         id: checkTag
