--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,12 +21,9 @@ jobs:
         id: github_ref
         run: |
           echo '${{ github.ref }}'
-          echo '${{ github.event_name }}'
-          echo "VELA_VERSION=${GITHUB_REF#refs/tags/}"
-          # echo '${GITHUB_REF#refs/tags/}'
           if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
-            echo "tags!"
-            echo '${{ github.ref }}'
+            echo "found tags"
+            echo '${ github.ref#refs/tags/ }'
           fi
 
       - uses: mukunku/tag-exists-action@v1.0.0
