--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,7 @@ jobs:
   test_var:
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v2
       - run: |
           velaux_version_clause=($(cat Makefile | grep "VELAUX_VERSION ?="))
           echo $velaux_version_clause
