--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
+          m=$(cat Makefile)
+          echo $m
+          s=$(cat Makefile | grep "VELAUX_VERSION ?=")
+          echo $s
           velaux_version_clause=($(cat Makefile | grep "VELAUX_VERSION ?="))
           echo $velaux_version_clause
           VELAUX_VERSION=${velaux_version_clause[3]}
