--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
           echo $m
           s=$(cat Makefile | grep "VELAUX_VERSION ?=")
           echo $s
-          velaux_version_clause=($(cat Makefile | grep "VELAUX_VERSION ?="))
+          velaux_version_clause=($s)
           echo $velaux_version_clause
           VELAUX_VERSION=${velaux_version_clause[3]}
           echo $VELAUX_VERSION
