--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,13 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          m=$(cat Makefile)
-          echo $m
-          s=$(cat Makefile | grep "VELAUX_VERSION ?=")
-          echo $s
-          velaux_version_clause=($s)
-          echo $velaux_version_clause
-          VELAUX_VERSION=${velaux_version_clause[3]}
+          VELAUX_VERSION=$(cat Makefile | grep "VELAUX_VERSION ?="|awk '{split($0,a," "); print a[3]}')
           echo $VELAUX_VERSION
           LDFLAGS="-s -w -X ${{ env.VELA_VERSION_KEY }}=${{ env.VELAD_VERSION }} -X ${{ env.VELAUX_VERSION_KEY }}=$VELAUX_VERSION -X ${{ env.VELAD_VERSION_KEY }}=${{ env.VELAD_VERSION }} -X ${{ env.VELA_GITVERSION_KEY }}=git-${{ env.VELA_SHA_SHORT }}"
           echo $LDFLAGS
