--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,9 @@ on:
       - v*
     branches:
       - main
+env:
+  VELA_VERSION: 1.4.0-beta.1
+  VELA_VERSION2: v1.4.0-alpha.1
 jobs:
 
   set-matrix:
@@ -36,6 +39,9 @@ jobs:
         name: subdir
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: echo "if clause"
+        if: !contains(env.VELA_VERSION,'alpha') && !contains(env.VELA_VERSION2,'beta')
+
   get-again:
     runs-on: ubuntu-20.04
     needs: set-matrix
