--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,6 @@ on:
       - main
 env:
   VELA_VERSION: 1.4.0-beta.1
-  VELA_VERSION2: v1.4.0-alpha.1
 jobs:
 
   set-matrix:
@@ -40,7 +39,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: echo "if clause"
-        if: ${{contains(env.VELA_VERSION,'alpha')}}
+        if: ${{contains(env.VELA_VERSION,'alpha') && contains(env.VELA_VERSION,'beta')}}
 
   get-again:
     runs-on: ubuntu-20.04
