--- a/.github/workflows/kind.yaml
+++ b/.github/workflows/kind.yaml
@@ -3,14 +3,14 @@ name: E2E Rollout Test
 on:
   push:
     branches:
-      - master
+      - main
       - release-*
     tags:
       - v*
   workflow_dispatch: {}
   pull_request:
     branches:
-      - master
+      - main
       - release-*
 
 env:
