--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - run: |
           # Download a platform specific version of auto
-          curl -vkL -o - https://github.com/intuit/auto/releases/download/v10.28.0/auto-linux.gz | gunzip > ~/auto
+          curl -kL -o - https://github.com/intuit/auto/releases/download/v10.28.0/auto-linux.gz | gunzip > ~/auto
           # Make auto executable
           chmod a+x ~/auto
-          ./auto shipit
+          ~/auto shipit
