--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -5,8 +5,11 @@ on:
     branches:
       - main
 
+
 jobs:
   auto-release:
+    env:
+      GH_TOKEN: {{ secrets.GH_TOKEN }}
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
