--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   auto-release:
     env:
-      GH_TOKEN: {{ secrets.GH_TOKEN }}
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
