--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -62,7 +62,11 @@ jobs:
   get-target:
     runs-on: ubuntu-20.04
     steps:
-      - run: |
+      - name: set_target
+        run: |
           TARGETS=linux/amd64
           echo "OS=${TARGETS%/*}" >> $GITHUB_OUTPUT
           echo "ARCH=${TARGETS#*/}" >> $GITHUB_OUTPUT
+      - name: get_target
+        run: |
+          echo {{ steps.set_target.outputs.OS }}
