--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -71,4 +71,4 @@ jobs:
           echo "ARCH=${TARGETS#*/}" >> $GITHUB_OUTPUT
       - name: get_target
         run: |
-          echo ${{ steps.set_target.outputs.OS }}
+          echo ${{ env.OS }}
