test official example

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -62,6 +62,11 @@ jobs:
   get-target:
     runs-on: ubuntu-20.04
     steps:
+      - name: Set color
+        id: random-color-generator
+        run: echo "SELECTED_COLOR=green" >> $GITHUB_OUTPUT
+      - name: Get color
+        run: echo "The selected color is ${{ steps.random-color-generator.outputs.SELECTED_COLOR }}"
       - name: set_target
         run: |
           TARGETS=linux/amd64
@@ -71,4 +76,4 @@ jobs:
           echo "ARCH=${TARGETS#*/}" >> $GITHUB_OUTPUT
       - name: get_target
         run: |
-          echo ${{ env.OS }}
+          echo ${{ steps.set_target.outputs.OS }}
