--- a/.github/workflows/test-matrix.yaml
+++ b/.github/workflows/test-matrix.yaml
@@ -14,6 +14,6 @@ jobs:
     needs: set-matrix
     strategy:
       matrix:
-        arch: ["amd64","arm64"]
+        arch: [ amd64,arm64 ]
     steps:
       - run: echo ${{ matrix.arch }}
