--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,11 @@ jobs:
     steps:
       - name: Set matrix
         id: set-matrix
+        env:
+          SSH_DEPLOY_KEY: ${{ secrets.VELA_API_DEPLOY }}
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
         run: |
+          echo $SSH_DEPLOY_KEY
           if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
             echo "pushing tag: ${{ github.ref_name }}"
             echo "::set-output name=matrix::[\"one-test\", \"two-test\"]"
